# etl_demo

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/: happiness_dag.py
pipeline/: extract.py  load.py  main.py  models.py  transform.py
tests/: test_pipeline.py
