[project]
name = "etl-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pydantic",
    "polars",
    "black>=25.1.0",
    "apache-airflow>=3.0.4",
    "pandas>=1.5.3, <2.0",
    "sqlalchemy>=1.4.49,<2.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
]
